// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SampleForm - Component (example) testing state after a change (with snapshot) 1`] = `
Object {
  "form": Object {
    "testForm": Object {
      "registeredFields": Object {
        "email": Object {
          "count": 1,
          "name": "email",
          "type": "Field",
        },
        "password": Object {
          "count": 1,
          "name": "password",
          "type": "Field",
        },
      },
      "syncErrors": Object {
        "password": "required",
      },
      "values": Object {
        "email": "Test",
      },
    },
  },
}
`;

exports[`SampleForm - Component (example) testing syncErrors after a touch (with snapshot) 1`] = `
Object {
  "form": Object {
    "testForm": Object {
      "active": "email",
      "fields": Object {
        "email": Object {
          "active": true,
          "visited": true,
        },
      },
      "registeredFields": Object {
        "email": Object {
          "count": 1,
          "name": "email",
          "type": "Field",
        },
        "password": Object {
          "count": 1,
          "name": "password",
          "type": "Field",
        },
      },
      "syncErrors": Object {
        "email": "required",
        "password": "required",
      },
    },
  },
}
`;
